--- a/style/footer.css
+++ b/style/footer.css
@@ -24,14 +24,16 @@ footer{
 }
 
 .link-container{
-    display: inline-grid;
-    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
     text-align: left;
+    margin-top: 10px;
     
 }
 
 .link-container span{
     color: #dc385ed4;
+    
 }
 
 .link-container a{
