--- a/style/clinica.css
+++ b/style/clinica.css
@@ -102,4 +102,33 @@
     
     
 }
- 
+ @media screen and (max-width: 370px) {
+    .clinica-text{
+        font-size: 0.9rem;
+        width: 50%;
+        text-align: left;
+        justify-content: end;
+    }
+
+    #clinica{
+        width: 80%;
+        text-align: left;
+        padding: 0 50px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    #img-atendimento{
+    width: 50%;
+    height: 50%;
+
+
+}
+    #icons-container {
+        font-size: 0.5rem;
+        justify-content: end;
+        width: 20%;
+
+
+    }
+    
+ }
