--- a/style/footer.css
+++ b/style/footer.css
@@ -89,9 +89,12 @@ footer{
     .footer-container{
         display: block;
         width: 400px;
-        z-index: auto;
-        justify-content: end;
-        margin: 20px;
+        margin-left: 5gi0px;
+        justify-content: center;
+        align-items: center;
+        padding: 0 20px;
+        text-align: center;
+
        
         
 
@@ -104,9 +107,10 @@ footer{
 
     
     #adicionais{
-        width: 100%;
+        width: 90%;
         justify-content: center;
-        text-align: start;
+        text-align: center;
+
         
     }
     
